symbol-table/cg_calc.y
%{
	/* Yacc program for generating code for an expression (using expression syntax tree)  */

  #define PLUS 22
	#define MINUS 33
	#define MUL 44
	#define DIV 55
	#define REM 66
	#define NEG 77
	#define POW 88
	#define NUM 99
	#define VAR 100  
	#define ASSIGN 101
        #define MOD 102	
        #define VOID 103
	#define CONDITIONAL_LT 104
	#define CONDITIONAL_GT 105
	#define CONDITIONAL_EQ 106 
        #define READ_NODE 145
        #define WRITE_NODE 150

/*Header files */
#include<stdio.h>
#include<stdlib.h> 

/*Global file pointer */
FILE *fp;

/*Data structure of a binary tree (which will be used to implement the expression syntax tree)*/
struct node
{       char* id;
	int node_type;
	int val;
	struct node *left;
	struct node *right;
};

/*Data structure of a symbol table*/
struct symbol_table
{ char * name;
  int size;
  int mptr;
  struct symbol_table *next;
} *root = NULL;

int off_set = 0;

/*Function for looking up in symbol table  */
struct symbol_table * Lookup(char* name); 
 
/* To install an indentifier in symbol table */
void install(struct node* NODE);

/*To keep track of number of free registers */
int regcount = -1;

/*To report an error */
void yyerror(char *);

/*To make a node in the tree*/
struct node* makenode(struct node *parent,struct node *left, struct node*right);

/*To recursively descend the tree and calculate the value of the expression*/
void calculate(struct node *t);




%}


%union 
{
	struct node *ptr;
	
};

%token <ptr> NUMBER
%token END DECLEND
%token <ptr> P M S D C R ID ASSIGN_OP   WRITE READ

%left P M
%left S D
%nonassoc C
%nonassoc R 
%nonassoc UMINUS

%type <ptr>  expr declare evaluate all_declarations declaration program
%start start
%%

start : program				    	{		
			                                fp = fopen("sil.asm","a");
							fprintf(fp,"START");
							fprintf(fp,"\nMOV SP,0");
							fprintf(fp,"\nMOV BP,0");
                                                        calculate($1);
						fprintf(fp,"\nHALT");                                                            
							fclose(fp);
							exit(1);
					   	}
	;

program : declare END evaluate               	{ 
							struct node * t1 = malloc(sizeof(struct node));
	                                                t1->node_type = VOID;
	                                                $$ = makenode(t1,$1,$3); 
                                               	}
        ;

declare : all_declarations DECLEND		{ $$=$1; }
        ;

all_declarations :   declaration all_declarations { 
							struct node * t1 = malloc(sizeof(struct node));
		                                        t1->node_type = VOID;
                                                     	$$=makenode(t1,$1,$2); 
						}
                 | 				{    $$= NULL;} 
                 ;

declaration : ID ASSIGN_OP expr END           {         install($1);
	                                                $$=makenode($2,$1,$3); 
					      }
    	    | READ '(' ID ')' END                   {	install($3);
                                                           $$=makenode($1,$3,NULL);}
      		
                                              
            ;  

evaluate   : WRITE '(' expr ')' END                {	
                                                            $$=makenode($1,$3,NULL);} 
           ;

expr : expr P expr                              {$$= makenode($2,$1,$3); }
     | expr M expr                              {$$=makenode($2,$1,$3); }
     | expr S expr				{$$=makenode($2,$1,$3); }
     | expr R expr 				{$$=makenode($2,$1,$3); }
     | expr D expr 				{$$=makenode($2,$1,$3); }		
     |'(' expr ')' 				{$$=$2;}
     | M expr %prec UMINUS                      {$$=makenode($1,$2,NULL);}
     | expr C expr                              {$$=makenode($2,$1,$3);  }
     | NUMBER                                   {$$= $1;}
     | ID                                       {$$= $1;}
     ;
 



%%

#include "lex.yy.c"

struct node *makenode(struct node *parent,struct node *left, struct node*right)
{
	parent->left=left;
	parent->right=right;

	return parent;
}


void install(struct node * NODE)
{ 
  struct symbol_table * temp = malloc(sizeof(struct symbol_table));
  temp->name = NODE->id;
  temp->mptr = off_set;
  off_set = off_set + 1;
  temp->next = root;
  root = temp;
}

struct symbol_table * Lookup(char * name)
{
  struct symbol_table *temp;
  temp=root;  
  while(temp !=NULL && (strcmp(temp->name,name)!=0))
    { 
      temp=temp->next;
    } 
  return temp;
}

void res_reg(int no_reg)	
{
	regcount=regcount+no_reg;					//reserves the lower registers
}

void free_reg(int no_reg)
{
	regcount=regcount-no_reg;					//frees the higher registers
}

int use_reg(int regno)           
{
	return regcount-regno+1;		/* Example: Conceptually, use_reg(2) will return R0 if R0 and R1 were reserved i.e. 						         res_reg(2)*/			
}

void calculate(struct node *t)
{

	if(t!=NULL)
	{
                if(t->node_type == VOID)
                {  
			calculate(t->left); 
	                calculate(t->right);
                }
		else if(t->node_type==PLUS)
		{	
                	
			calculate(t->left);
			calculate(t->right);
 			fprintf(fp,"\nADD R%d,R%d",use_reg(2), use_reg(1));
			free_reg(1);		
		}
		else if(t->node_type==MINUS)
		{
			if(t->right == NULL)
			{	
				calculate(t->left);
				res_reg(1);
				fprintf(fp,"\nMOV R%d,-1",use_reg(1));
				fprintf(fp,"\nMUL R%d,R%d",use_reg(2),use_reg(1));
				free_reg(1);
			}
			else
			{	calculate(t->right);
				fprintf(fp,"\nSUB R%d,R%d",use_reg(2), use_reg(1));
		       		free_reg(1);
			}
		}
		else if(t->node_type==MUL)
		{
                        calculate(t->left);
			calculate(t->right);
 			fprintf(fp,"\nMUL R%d,R%d",use_reg(2), use_reg(1));
			free_reg(1);
		}
                else if(t->node_type==MOD)
		{
                    	calculate(t->left);
			calculate(t->right);
 			fprintf(fp,"\nMOD R%d,R%d",use_reg(2), use_reg(1));
			free_reg(1);
		}
		else if(t->node_type==DIV)
		{
                        calculate(t->left);
			calculate(t->right);
 			fprintf(fp,"\nDIV R%d,R%d",use_reg(2), use_reg(1));
			free_reg(1);
		}
		else if(t->node_type==NUM)
		{
			int val = t->val;
			res_reg(1);
			fprintf(fp,"\nMOV R%d,%d",use_reg(1), val);		
		}
              	else if (t->node_type == VAR)
                {    
			struct symbol_table *temp_node;
	                temp_node = Lookup(t->id);
                        int mptr = temp_node->mptr;
                        res_reg(3);
			fprintf(fp,"\nMOV R%d,BP",use_reg(2));
			fprintf(fp,"\nMOV R%d,%d",use_reg(1),mptr);
			fprintf(fp,"\nADD R%d,R%d",use_reg(2),use_reg(1));
			fprintf(fp,"\nMOV R%d,[R%d]",use_reg(3),use_reg(2));
			free_reg(2);		
               	}
                else if (t->node_type == ASSIGN)
                {  
			struct symbol_table *temp_node;
	                temp_node = Lookup(t->left->id);
                        int mptr = temp_node->mptr;
                        res_reg(2);
			fprintf(fp,"\nMOV R%d,BP",use_reg(2));
			fprintf(fp,"\nMOV R%d,%d",use_reg(1),mptr);
			fprintf(fp,"\nADD R%d,R%d",use_reg(2),use_reg(1));
			free_reg(1);
			calculate(t->right);
                   	fprintf(fp,"\nMOV [R%d],R%d",use_reg(2),use_reg(1));
                   	free_reg(2);
                }
               else if(t->node_type == WRITE_NODE)
                {  	
			calculate(t->left);
                    	fprintf(fp,"\nOUT R%d",use_reg(1));
                }
           	else if(t->node_type == READ_NODE)
                {    
			res_reg(1);			
			fprintf(fp,"\nIN R%d",use_reg(1));
                        struct symbol_table *temp_node;
                         temp_node = Lookup(t->left->id);
                      	 int mptr = temp_node->mptr;
                        res_reg(2);
			fprintf(fp,"\nMOV R%d,BP",use_reg(1));
			fprintf(fp,"\nMOV R%d,%d",use_reg(2),mptr);
			fprintf(fp,"\nADD R%d,R%d",use_reg(1),use_reg(2));
			fprintf(fp,"\nMOV [R%d],R%d",use_reg(1),use_reg(3));
			free_reg(3);
                }
	}
}	
	


void yyerror(char *s)
{
	fprintf(stderr, "%s\n", s);
}
int yywrap(void)
{
	return 1;	
}
	
int main()
{
	yyparse();
	return 0;
}
